<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ft_hangout.MainActivity">

    <item
        android:id="@+id/action_theme"
        android:title="@string/action_theme"
        app:showAsAction="never">

            <menu android:id="@+id/sous_menu">
                <item android:id="@+id/theme_1"
                    android:title="@string/action_theme_1"   />

                <item android:id="@+id/theme_2"
                    android:title="@string/action_theme_2"  />
            </menu>
    </item>

    <item
        android:id="@+id/action_language"
        android:title="@string/action_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_All"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>